# Regressive-ResNet-Model

./: model.py  ratings.csv  setup.cfg
