[metadata]

name = exposuremodelf
version = 1.1.1
author = sha
author_email = sliu23009@gmail.com

classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True

